Agregando configuraciones para conectar a la bdd en render

--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
-DB_NAME=gestortareas
-DB_USER=postgres
-DB_PASS=12345678
-DB_HOST=localhost
+DB_NAME=gestortareas_w585
+DB_USER=postgress
+DB_PASSWORD=v3TIuluPmlj5Kt4J3T6NbjJAMe0DFqhG
+DB_HOST=dpg-d0kgipogjchc73adcafg-a.oregon-postgres.render.com
 JWT_SECRET=miclavesupersecreta
 GENERATE_SOURCEMAP=false
+
+DATABASE_URL=postgresql://postgress:v3TIuluPmlj5Kt4J3T6NbjJAMe0DFqhG@dpg-d0kgipogjchc73adcafg-a.oregon-postgres.render.com:5432/gestortareas_w585?sslmode=require
+
 
