Agregando URL DEL FRONTEND EN VERCEL

--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@ JWT_SECRET=miclavesupersecreta
 GENERATE_SOURCEMAP=false
 
 DATABASE_URL=postgresql://postgress:v3TIuluPmlj5Kt4J3T6NbjJAMe0DFqhG@dpg-d0kgipogjchc73adcafg-a.oregon-postgres.render.com:5432/gestortareas_w585?sslmode=require
+FRONTEND_URL=https://gestortareasfrontend.vercel.app/
 
 
